--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "main.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS "main.c" "coredump_uploader/coredump_uploader.c"
+                    REQUIRES espcoredump spi_flash esp_partition nvs_flash mbedtls
+                    INCLUDE_DIRS "." "coredump_uploader/")
