--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "main.c" "coredump_uploader/coredump_uploader.c"
-                    REQUIRES espcoredump spi_flash esp_partition nvs_flash mbedtls
-                    INCLUDE_DIRS "." "coredump_uploader/")
+idf_component_register(SRCS "main.c" "connection/wifi.c" "connection/mqtt_app.c" "coredump_uploader/coredump_uploader.c"
+                    REQUIRES espcoredump spi_flash mqtt esp_partition nvs_flash esp_wifi
+                    INCLUDE_DIRS "." "connection/" "coredump_uploader/")
