--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "backend/damicore"]
-	path = backend/damicore
-	url = https://gitlab.uspdigital.usp.br/kevin.polo/damicore-python3.git
+[submodule "backend/damicore-python3"]
+	path = backend/damicore-python3
+	url = https://gitlab.uspdigital.usp.br/isaacsantos.soares/damicore-python3.git
