--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "backend/damicore-python3"]
 	path = backend/damicore-python3
 	url = https://gitlab.uspdigital.usp.br/isaacsantos.soares/damicore-python3.git
+	branch = master
